--- a/general.bib
+++ b/general.bib
@@ -81,13 +81,13 @@
 	Isbn = {9783832528195 (pbk.)},
 	Library-Id = {2011525563},
 	Publisher = {Logos Verlag},
-	Title = {The sonification handbook},
+	Title = {The {s}onification {h}andbook},
 	Year = {2011}}
 
 @inproceedings{audif,
 	author = {Florian Dombois and Gerhard Eckel},
 	title = {Audification},
-	booktitle = {Sonification Handbook},
+	booktitle = {The {S}onification {H}andbook},
 	publisher = {Logos Verlag}, 
 	pages = {301--324},
 	year = {2011}}
