--- a/include/performances.tex
+++ b/include/performances.tex
@@ -1,6 +1,6 @@
-
 \chapter{List of selected performances, exhibitions, workshops and lectures}
 \singlespacing
+
 \textbf{2011}
 \begin{itemize}
 \item Participating in workshop of Seijiro Murayama and performing in A4, Bratislava
@@ -11,8 +11,8 @@
 \item Performing on AudioArt festival, Cracow, Poland. Exhibiting live sound installation Sonodump, Krakow, Poland
 \item Performing on NEXT festival, Bratislava Slovakia
 \end{itemize}
-\\*
-\\*
+\vspace{1cm}
+
 \textbf{2012}
 \begin{itemize}
 \item Performing with Krakow Active Ensamble in Alchemia, Krakow, Poland
@@ -37,8 +37,8 @@
 \item Performing with Luke Deane and Eugene Kim, Den Haag, Netherlands
 \item BINMATU performance at NEXT festival, Slovakia
 \end{itemize}
-\\*
-\\*
+\vspace{1cm}
+
 \textbf{2013}
 \begin{itemize}
 \item BINMATU performance at Ephemere, Den Haag, Netherlands
