--- a/Thesis.tex
+++ b/Thesis.tex
@@ -454,13 +454,13 @@ I have decided to work with resonant frequencies of the space. By measuring the 
 
 \subsection{Technical aspects}
 
-But before that, it is important to mention, that I have decided (as part of the minimalistic aesthetics) not to use regular speakers. I see them as somehow distracting elements. And, the method I have used instead --- tactile transducers --- worked much better visually, and sonically.
+It is important to mention, that I have decided (as part of the minimalistic aesthetics) not to use regular speakers. I see them as somehow distracting elements. And, the method I have used instead --- tactile transducers --- worked much better visually, and sonically.
 
 Tactile transducers are basically moving coils (like ones in the speaker), but without the speaker cone. They can be attached to any object, which has at least a bit moving body. Tactile transducers utilize the body as a speaker cone, and in a result, the object becomes a speaker. 
 
-This of course brings many interesting aspects to the newly created sound emitter. Mainly, it is inheriting the acoustic imperfections of the object. E.g.\ metallic plate resonates at certain frequencies and presents a long reverb (such as in plate reverb). I have, of course, exercised this greatly in my project.
+This of course brings many interesting aspects to the newly created sound emitter. Mainly, it is inheriting the acoustic imperfections of the object. E.g.\ metallic plate resonates at certain frequencies and presents a long reverb (such as in plate reverb). I have exercised this greatly in my project.
 
-Firstly, I have acquired various interesting objects which were laying around in the workshop of the gallery --- two metallic plates and one empty oil barrel. Than I created three different `stages' --- three different sound emitting objects. Two of those were connected to one amplifier and than to my computer, and one stage was totally separate from the main computer. To achieve this visual separation --- no cables running through the space\footnote{I believe there is important visual aspect to that. Element of surprise, perception of the object as truly autonomous sound emitting unit.} I have used few different technologies I had on hand. Sound was generated from microcomputer Raspberry Pi running sound programming language Chuck. This audio was than fed to small amplifier and finally to the object (to the transducer connected to it).
+Firstly, I have acquired various interesting objects which were laying around in the workshop of the gallery --- two metallic plates and one empty oil barrel. Then I created three different `stages', three different sound emitting objects. Two of those were connected to one amplifier and then to my computer, and one stage was totally separate from the main computer. To achieve this visual separation --- no cables running through the space. This was important to me, since I often find cables distracting in visual domain. My goal was element of surprise, perception of the object as truly autonomous sound emitting unit. To accomplish that, I have used few different technologies I had on hand. Sound was generated from microcomputer Raspberry Pi running sound programming language Chuck. This audio was than fed to small amplifier and finally to the object (to the transducer connected to it). For better understanding, I have created figure~\ref{fig:sitespec}.
 
 \begin{figure}  
   \centering
@@ -501,24 +501,28 @@ Firstly, I have acquired various interesting objects which were laying around in
 	\label{fig:sitespec}
 \end{figure}
 
-This solution gave me opportunity to have full control over what was happening in the room sound wise without need for jungle of wires and multichannel sound cards. It became especially important, when my worked in the gallery became more focused on performing with the installation rather than creating an standalone self-sustaining installation.
+This solution gave me opportunity to have full control over what was happening in the room sound wise, without need for a jungle of wires and multichannel sound cards. It became especially important, when my work in the gallery became more focused on performing with the objects rather than creating an standalone self-sustaining installation.
 
-Visually, the installation was very minimalistic --- bare metallic plates emitting sound and one rambling oil can shaking in fearful drone. I personally find something very intriguing about simple metallic objects in space, especially when standing in space on their own, simple and raw in their full glory. They are like simple and understandable statements in a book yet they offer few different viewpoints.
+Visually, the installation was very minimalistic --- bare metallic plates emitting sound and one rambling oil can, shaking in a fearful drone. I personally find something very intriguing about simple metallic objects in space, especially when standing on their own, simple and raw in their full glory. They are like simple and understandable statements in a book yet they offer few different viewpoints.
 
 \subsection{Performances}
 
-I have performed with the installation 5 times, for various groups of people. First performances were happening during Hoogtij event, which turned out to be unfortunate. The crowds and delicate sound installations simply do not come together as a good match and I had ask people to be quite many times to make my work audible. Luckily the last three performances after unsuccessful two went quite successfully, one even having a very positive review at local art blog\footnote{\url{http://jegensentevens.nl/2013/03/de-frequentie-van-materiaal/}}.
+I have performed with the installation 5 times, for various groups of people. First performances were happening during Hoogtij event, which turned out to be unfortunate. The crowds and delicate sound installations simply do not come together as a good match, and I had to ask people to be quite many times to make my work audible. Luckily the last three performances after unsuccessful two went quite successfully, one even turned out having a very positive review at local art blog \cite{jegen}.
+
+\subsection{Conclusion and future}
+
+Clear message coming from presentation of these works is to prepare the audience as much as possible for what is being presented, otherwise the subtle details, which I base my work on, go unnoticed, unexperienced --- worthless.
+
+This project gave me a lot of inspiration for further works, and I have been asked by the director of the gallery to come again to create something new for their spaces.
+
+I have actually quite enjoyed the concept of creating installation as a system for performance, performing on non traditional setups sets beautiful atmosphere to the work and creates very different listening situation from the one we all know. 
 
 \begin{figure}  
   \centering
-    \includegraphics[width=0.9\textwidth]{img/sitespec}
+    \includegraphics[width=0.8\textwidth]{img/sitespec}
 	\caption{Site specific resonances performance}
 	\label{fig:sitespec}
 \end{figure}
-
-Clear message from these works is to prepare the audience as much as possible for what is being presented, otherwise the subtle details which I base my work on go unnoticed, unexperienced --- thus worthless. It gave me a lot of inspiration for further projects, and I have been asked by the director of the gallery to come again to create something new for their spaces.
-
-I have actually quite enjoyed the concept of creating installation as a system for performance, performing on non traditional setups sets beautiful atmosphere to the work and creates very different listening situation from the one we all know. 
 
 \chapter{Conclusion}
 
