--- a/general.bib
+++ b/general.bib
@@ -303,6 +303,14 @@
 	Year = {2013},
 	Url = {http://www.tcpdump.org/tcpdump_man.html}
 	}
+	
+@misc{jegen,
+	Title = {{De frequentie van materiaal | Jegens & Tevens}},
+	Urldate = {May 5, 2013},
+	Year = {2013},
+	Url = {http://jegensentevens.nl/2013/03/de-frequentie-van-materiaal/}
+	}
+
 
 	
 
